--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,24 @@ server.port=9999
 
 api.key.username=login
 api.key.password=pass
+
+logging.level.org.springframework.web=DEBUG
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.redis.time-to-live=604800
+
+bucket4j.enabled=true
+bucket4j.cache-to-use=redis-jedis
+
+bucket4j.filter-config-caching-enabled=true
+bucket4j.filter-config-cache-name=filterConfigCache
+
+bucket4j.filters[0].cache-name=cyka
+bucket4j.filters[0].major-version=2
+bucket4j.filters[0].url=^(/api/v2/healthcheck/settings).*
+bucket4j.filters[0].id=filter1
+bucket4j.filters[0].rate-limits[0].tokens-inheritance-strategy=reset
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=10
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=seconds
+bucket4j.filters[0].rate-limits[0].bandwidths[0].refill-speed=interval
